--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@ body {
   width: 20rem;
   height: auto;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #191919;
+  flex-direction: column;
+  justify-content: start;
+  background-color: #121212;
+  padding: 8px;
 }
 
 .container {
@@ -12,15 +13,14 @@ body {
   width: 100%;
   height: 100%;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   gap: 16px;
-  padding: 4px;
 }
 
 h1 {
   color: white;
-  opacity: 0.8;
+  opacity: 0.9;
 }
 
 .list {
@@ -28,7 +28,7 @@ h1 {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  gap: 6px;
+  gap: 8px;
   padding: 0px;
 }
 
@@ -39,19 +39,21 @@ h1 {
   justify-content: space-between;
   gap: 4px;
   align-items: center;
-  background-color: #121212;
+  background-color: #191919;
   border-radius: 5px;
-  padding: 0px 4px 0px 4px;
+  padding: 0px 6px 0px 6px;
 }
 
 .item {
   text-decoration: none;
+  font-size: 14px;
   color: white;
   opacity: 0.8;
 }
 
 .removedItem {
   text-decoration: line-through;
+  font-size: 14px;
   color: white;
   opacity: 0.8;
 }
@@ -59,28 +61,32 @@ h1 {
 img {
   width: 17px;
   aspect-ratio: 1/1;
-  opacity: 0.7;
+  opacity: 1;
 }
 
 img:hover {
   cursor: pointer;
+  background-color: gray;
+  border-radius: 25px;
   opacity: 1;
 }
 
 img:active {
   opacity: 1;
-  background-color: #f6f6f6;
+  background-color: lightslategray;
   border-radius: 25px;
 }
 
 button {
   background-color: darkslateblue;
   color: white;
+  width: 40%;
   opacity: 0.9;
   padding: 8px 16px 8px 16px;
   border-radius: 25px;
   box-shadow: none;
   border: none;
+  font-weight: bold;
 }
 
 button:hover {
