--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 body {
-  width: 20rem;
+  width: 320px;
   height: auto;
   display: flex;
   flex-direction: column;
   justify-content: start;
   background-color: #121212;
-  padding: 10px;
+  padding: 8px 4px 8px 4px;
 }
 
 .container {
   display: flex;
-  width: 100%;
+  width: 320px;
   height: 100%;
   flex-direction: column;
   justify-content: start;
@@ -29,20 +29,15 @@ h1 {
   align-items: center;
   width: 100%;
   gap: 8px;
-  padding: 0px;
+  max-height: 460px;
+  overflow: auto;
 }
 
 .innerDiv {
-  display: flex;
-  flex-direction: row;
   width: 100%;
-  justify-content: space-between;
-  gap: 4px;
   align-items: center;
   background-color: #212121;
   border-radius: 8px;
-  padding-left: 8px;
-  padding-right: 8px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
@@ -57,14 +52,22 @@ h1 {
   color: white;
   opacity: 0.9;
   text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 
 .removedItem {
   text-decoration: line-through;
   font-size: 14px;
-  color: red;
-  opacity: 0.9;
+  color: white;
+  opacity: 0.3;
   text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 
 img {
