--- a/style.css
+++ b/style.css
@@ -18,11 +18,6 @@ body {
   gap: 1px;
 }
 
-h1 {
-  color: white;
-  opacity: 0.9;
-}
-
 .list {
   display: flex;
   flex-direction: column;
@@ -33,18 +28,23 @@ h1 {
   overflow: auto;
 }
 
-.innerDiv {
+.inner-div {
   width: 100%;
   align-items: center;
   background-color: #efefef;
   border-radius: 8px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   font-weight: 500;
+  user-select: none;
 }
 
-.innerDiv:hover {
+.inner-div-removed {
+  opacity: 0.5;
+}
+
+.inner-div:hover {
   cursor: pointer;
-  opacity: 0.8;
+  opacity: 0.7;
 }
 
 .item {
@@ -59,7 +59,7 @@ h1 {
   padding-right: 8px;
 }
 
-.removedItem {
+.removed-item {
   text-decoration: line-through;
   font-size: 14px;
   color: black;
@@ -126,23 +126,4 @@ button {
 button:hover {
   opacity: 0.85;
   cursor: pointer;
-}
-
-img {
-  width: 20px;
-  aspect-ratio: 1/1;
-  opacity: 1;
-}
-
-img:hover {
-  cursor: pointer;
-  background-color: gray;
-  border-radius: 25px;
-  opacity: 1;
-}
-
-img:active {
-  opacity: 1;
-  background-color: lightslategray;
-  border-radius: 25px;
 }
