--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: start;
-  background-color: #efefef;
+  background-color: #fefefe;
   padding: 8px 4px 8px 4px;
 }
 
@@ -23,7 +23,7 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  gap: 8px;
+  gap: 12px;
   max-height: 460px;
   overflow: auto;
 }
@@ -31,7 +31,7 @@ body {
 .tab-list__item {
   width: 100%;
   align-items: center;
-  background-color: #dfdfdf;
+  background-color: #ededed;
   border-radius: 8px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   font-weight: 500;
