--- a/style.css
+++ b/style.css
@@ -131,3 +131,23 @@ button:disabled {
   color: #f6f6f6;
   border: none;
 }
+
+.popup__pick-number--container {
+  background-color: #fefefe;
+  width: 80%;
+  height: fit-content;
+  border-radius: 8px;
+  position: absolute;
+  top: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 5px;
+  gap: 6px;
+}
+
+.popup__pick-number--button-container {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
